[project]
name = "comptegoutte"
version = "0.1.0"
description = "Uroflow Meter by ED-STEINER"
authors = [
    {name = "edouard steiner",email = "boursoracle@free.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pandas (>=2.2,<3.0)",
    "scikit-learn (==1.6.0)"
]

[tool.poetry]
packages = [{include = "comptegoutte", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
